refact: cloudformation-ms shared functions
