# cmd/cloudformation-ms/get-stacks/internal/types/types.go
@@ -1,8 +1,0 @@
-package types
-
-type RequestBody struct {
-	StackName       string `json:"stackName"`
-	AccessKeyID     string `json:"acessKey"`
-	SecretAccessKey string `json:"secretAccessKey"`
-	Region          string `json:"region"`
-}
